<resources>
    <string name="app_name">FinalProject</string>
    <string name="search_button">Search</string>
    <string name="search_text">Search Here</string>
    <string name="property_image">Poster Image</string>
    <string name="movie_title">movie_title</string>
    <string name="movie_description">movie_description</string>
    <string name="movie_actors">movie_actors</string>
    <string name="movie_year">movie_year</string>
    <string name="movie_length">movie_length</string>
    <string name="movie_genre">movie_genre</string>
    <string name="movie_rating">movie_rating</string>
    <string name="searching">Searching...</string>
    <string name="info">Info</string>
    <string name="movie_information">Movie Information</string>
    <string name="movie_author">Movie Information made by Ethan Nguyen</string>
    <string name="version">Version 1</string>
    <string name="instruction">Input for a movie that you want to see information and click Search</string>
    <string name="add_movie">Add</string>
    <string name="favourite_list">Favourite</string>
    <string name="add_list">Do you want to add this movie to your list?</string>
    <string name="dialog_title">Add movie</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="message">Added successfully</string>
    <string name="other">Other Activities</string>
    <string name="final_title">This is the Final Project</string>
    <string name="food_info_author">Food Information - Chi Mien Huynh</string>
    <string name="movie_information_author">Movie Information - Nguyen Gia Nguyen</string>
    <string name="cbc_information_author">CBC News Reader - Kiet Tran</string>
    <string name="search_news">Search News</string>
    <string name="search">Search</string>
    <string name="cbc_news">CBC News</string>


    <string name="food_listview">food_listview</string>
    <string name="food_progressBar">food_progressBar</string>
    <string name="food_button">SEARCH</string>
    <string name="food_edittext">food_edittext</string>

    <string name="food_ok">ok</string>

    <string name="toast_nutrition">Welcome to nutrition search!</string>
    <string name="toast_error">Can not found</string>


    <string name="calorie">Calorie</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="fiber">Fiber</string>
    <string name="food_label">Label</string>
    <string name="save">Save to favourite</string>

    <string name="favourite">Favourite list</string>
    <string name="help">Help</string>
    <string name="food_about_dialog">Save to favourite</string>
    <string name="deletebutton">Delete</string>
    <string name="viewfavourite">View Favourite List</string>

    <string name="myname">Chi Mien Huynh</string>
    <string name="dialog1">Enter the name of food and click search button to get nutrients of food. From ToolBar, you can choose the "Favouite list" to go to save list. Also, you can save the data to the list by click on the "saveButton.
        Also you can delete what you have saved by clicking the delete button"</string>
    <string name="foodversion">Version 1</string>
    <string name="errormessage">You need to enter a name of food</string>
    <string name="errormessage1">Saving data is successfull</string>
    <string name="errormessage2">Saving data is not successfull</string>
    <string name="cbc_news_reader">CBC News Reader</string>
    <string name="cbc_news_reader_author">CBC News Reader by Kiet Tran</string>
    <string name="cbc_news_instruction">Input news to read then click search to search for news</string>
</resources>
