<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CbcnewsActivity">

    <Toolbar
        android:id="@+id/news_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/searchnews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="386dp"
        android:text="@string/search_news" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="65dp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/new_search_edittext"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="389dp"
        android:layout_toLeftOf="@+id/searchnews"
        android:hint="@string/search"
        android:inputType="text" />

    <ListView
        android:id="@+id/news_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/searchnews"
        android:layout_alignParentStart="true"
        android:layout_marginTop="-418dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/searchnews"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:text="@string/cbc_news" />

</RelativeLayout>